Spacing fixes

--- a/src/components/About/Skills/index.scss
+++ b/src/components/About/Skills/index.scss
@@ -3,6 +3,7 @@
         .text-zone {
             width: 90%;
             animation: fadeIn 1s 1s;
+            padding-bottom: 80px;
         }
 
         .grid-container {
