--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -3,14 +3,15 @@
         text-align: left;
         .text-zone {
             position: absolute;
-            top: 180px;
-            padding: 5%;
-            transform: translateY(-50%);
+            // top: 180px;
+            // padding: 5%;
+            left: 5%;
+            transform: translateY(-20px);
             width: 50%;
             vertical-align: middle;
             display: table-cell;
-            max-height: 90%;
-            overflow-y: scroll;
+            // max-height: 90%;
+            // overflow-y: scroll;
         }
 
         h1 {
@@ -29,13 +30,15 @@
             img {
                 position: absolute;
                 width: 35%;
+                top: auto;
                 margin-left: 0;
                 right: 5%;
                 overflow: hidden;
-                // animation: pulse 1s 3.2s;
+                transition: all .2s ease-in-out;
             }
             img:hover {
-                animation: pulse 1s 0.1s;
+                transition: all .2s ease-in-out;
+                transform: scale(1.1);
             }
         }
 
@@ -80,11 +83,9 @@
     }
 
     .skills-page {
-        padding-top: 5%;
-        padding-bottom: 5%;
         position: relative;
-        top:790px;
-        height: 110vh;
+        top:600px;
+        height:100%;
     }
 }
 
@@ -93,12 +94,10 @@
         text-align: center;
         .text-zone {
             position: absolute;
-            top: 100px;
-            padding: 5%;
-            transform: translateY(-50%);
+            // top: 100px;
+            left: 5%;
+            transform: translateY(-30px);
             width: 90%;
-            max-height: 90%;
-            overflow-y: scroll;
         }
 
         h1 {
@@ -158,10 +157,8 @@
     }
 
     .skills-page {
-        padding-top: 5%;
-        padding-bottom: 5%;
         position: relative;
         top:420px;
-        height: 110vh;
+        // height: 110vh;
     }
 }
