--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -73,6 +73,14 @@
             }
         }
     }
+
+    .text-animate4 {
+        display: inline-block;
+        opacity: 0;
+        animation: fadeIn 1s 1s;
+        animation-fill-mode: forwards;
+        min-width: 10px;
+    }
 }
 
 @media only screen and (max-width: 650px) {
