--- a/src/components/Experience/Education/index.scss
+++ b/src/components/Experience/Education/index.scss
@@ -88,13 +88,14 @@
                 margin-bottom: 20px;
                 padding-left: 30px;
                 padding-right: 30px;
+
                 div {
                     margin-top: 5px;
                 }
             }
 
             &:nth-of-type(2) {
-                padding-bottom:10%;
+                padding-bottom:20%;
             }
 
             .awards {
