--- a/src/components/Experience/Work/index.scss
+++ b/src/components/Experience/Work/index.scss
@@ -82,7 +82,7 @@
                 font-size: 20px;
             }
             &:nth-of-type(3) {
-                padding-bottom:10%;
+                padding-bottom:20%;
             }
         }
 
