--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -2,7 +2,7 @@
     .experience-page {
         text-align: center;
         .text-zone {
-            transform: translateY(-3%);
+            transform: translateY(-40px);
             // min-height:150%;
         }
 
@@ -47,7 +47,7 @@
         text-align: center;
 
         .text-zone {
-            transform: translateY(0%);
+            transform: translateY(-40px);
         }
 
         h1 {
