--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -2,10 +2,9 @@
     .logo-container {
         position: absolute;
         left: 60%;
-        top: 30%;
-        transform: translateY(-50%);
+        transform: translateY(-15%);
         width: 40%;
-        max-height: 90%;
+        // max-height: 90%;
     }
 
     .solid-logo {
