--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -3,10 +3,8 @@
         .text-zone {
             position: absolute;
             left: 8%;
-            top: 30%;
-            transform: translateY(-50%);
             width: 50%;
-            max-height: 90%;
+            transform: translateY(-3%);
         }
     
         h1 {
@@ -33,6 +31,7 @@
             position: relative;
             text-decoration: none;
             margin-top:8px;
+            padding-bottom:70px;
             margin-right:7%;
             width: 64px;
             color:#4d4d4e;
@@ -63,7 +62,7 @@
                 font-size: 15px;
                 letter-spacing: 2px;
                 position: relative;
-                right: 8px;
+                right: 10px;
                 bottom: 0;
                 display: block;
                 width: 100%;
@@ -158,7 +157,7 @@
                     font-size: 15px;
                     letter-spacing: 2px;
                     position: relative;
-                    right: 20px;
+                    right: 6px;
                     bottom: 0;
                     display: block;
                     width: 100%;
